--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>
-                                com.example.registroelettronico/com.example.registroelettronico.HelloApplication
-                            </mainClass>
+                            <mainClass>com.example.registroelettronico/application.MainApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
